# Gravy

./: .gitignore  LICENSE  README.md  constants.py  evaluate.py  featurize.py  pyproject.toml  toluene.py
src/gravy/: __init__.py  evaluate.py  featurize.py  fragment_search.py  preprocess.py  query.py  train.py  utils.py
src/gravy/scalers/: edatas.z  ndatas.z
